# stock-logistics-warehouse

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
setup/_metapackage/: pyproject.toml
stock_archive_constraint/: README.rst
stock_archive_constraint/i18n/: it.po
stock_archive_constraint/static/description/: index.html
stock_location_empty/i18n/: it.po
stock_location_zone/: README.rst
stock_location_zone/static/description/: index.html
stock_move_common_dest/: README.rst
stock_move_common_dest/static/description/: index.html
stock_quant_cost_info/: README.rst
stock_quant_cost_info/i18n/: it.po
stock_quant_cost_info/static/description/: index.html
stock_quant_manual_assign/: README.rst
stock_quant_manual_assign/static/description/: index.html
stock_secondary_unit/: README.rst
stock_secondary_unit/i18n/: it.po
stock_secondary_unit/static/description/: index.html
